# users/models.go
@@ -61,3 +61,20 @@ type InviteUserRequest struct {
 	CurrentUserID int    `json:"-"`
 	CurrentRoleID int    `json:"-"`
 }
+
+type AcceptInvitationRequest struct {
+	Token           string `json:"token"`
+	UserName        string `json:"username"`
+	FirstName       string `json:"firstName"`
+	LastName        string `json:"lastName"`
+	Password        string `json:"password"`
+	ConfirmPassword string `json:"confirmPassword"`
+}
+
+type AcceptInvitationResponse struct {
+	InviteAccepted bool   `json:"inviteAccepted"`
+	OrgSlug        string `json:"orgSlug"`
+	Token          string `json:"token"`
+	Status         string `json:"status"`
+	RoleID         int    `json:"roleId"`
+}
