# users/router.go
@@ -3,6 +3,9 @@ package users
 import "github.com/gofiber/fiber/v2"
 
 func RegisterRoutes(router fiber.Router, orgRouter fiber.Router, userHttpTransport UserHTTPTransport, authMiddleware func(c *fiber.Ctx) error) {
+	baseUserRouter := router.Group("/users")
+	baseUserRouter.Post("/invite/accept/:token", userHttpTransport.AcceptInvitation)
+	
 	userRouter := orgRouter.Group("/users")
 	userRouter.Put("/change-user-role", userHttpTransport.ChangeUserRole)
 	userRouter.Put("/change-user-status", userHttpTransport.ChangeUserStatus)
