# users/service.go
@@ -9,6 +9,7 @@ import (
 	"strings"
 	"time"
 
+	"github.com/gofiber/fiber/v2/log"
 	"github.com/golang-jwt/jwt/v4"
 	"golang.org/x/crypto/bcrypt"
 	"gopkg.in/gomail.v2"
@@ -27,6 +28,7 @@ type userApi struct {
 	db *gorm.DB
 	dialer *gomail.Dialer
 	uiAppUrl string
+	logger *log.AllLogger
 }
 
 type UserAPI interface {
@@ -35,6 +37,7 @@ type UserAPI interface {
 	ChangeUserRole(req *ChangeUserRoleRequest) (*StatusResponse, error)
 	ChangeUserStatus(req *ChangeUserStatusRequest) (*StatusResponse, error)
 	InviteUser(req *InviteUserRequest) (*StatusResponse, error)
+	AcceptInvitation(req *AcceptInvitationRequest) (*AcceptInvitationResponse, error)
 }
 
 func NewUserService(db *gorm.DB, dialer *gomail.Dialer, uiAppUrl string) UserAPI {
@@ -323,7 +326,7 @@ func (s *userApi) InviteUser(req *InviteUserRequest) (res *StatusResponse, err e
 	// Check if user exists
 	result = s.db.Where("email = ?", req.Email).First(&user)
 	if result.Error != nil {
-		return nil, result.Error
+		log.Error("user not found")
 	}
 
 	currentUserFullName := cUser.FirstName + " " + cUser.LastName
@@ -335,17 +338,17 @@ func (s *userApi) InviteUser(req *InviteUserRequest) (res *StatusResponse, err e
 	}
 
 	if user.ID == 0 {
-		if err := handleTotalUsersLimit(s.db, req.OrgID); err != nil {
-			return nil, err
-		}
+		// if err := handleTotalUsersLimit(s.db, req.OrgID); err != nil {
+		// 	return nil, err
+		// }
 
-		if err := handleAdminRoleLimit(s.db, req.OrgID); err != nil {
-			return nil, err
-		}
+		// if err := handleAdminRoleLimit(s.db, req.OrgID); err != nil {
+		// 	return nil, err
+		// }
 
-		if err := handleAdvisorRoleLimit(s.db, req.OrgID); err != nil {
-			return nil, err
-		}
+		// if err := handleAdvisorRoleLimit(s.db, req.OrgID); err != nil {
+		// 	return nil, err
+		// }
 
 		// Generate hash pw
 		pwd := helper.RandomString(8)
@@ -417,6 +420,213 @@ func (s *userApi) InviteUser(req *InviteUserRequest) (res *StatusResponse, err e
 
 	return &StatusResponse{Status: true}, nil
 }
+
+// @Summary      	InviteAccept
+// @Description		Validates token, username, firstName, lastName, password and confirmPassword, then check in DB if user with same email and org is already connected if not creates User, Profile and Org Relationship and returns created user ID in response.
+// @Tags			Users
+// @Accept			json
+// @Produce			json
+// @Param			token				path		string				true	"Token"
+// @Param			AcceptInvitationRequest	body		AcceptInvitationRequest	true	"AcceptInvitationRequest"
+// @Success			200					{object}	AcceptInvitationResponse
+// @Router			/api/users/invite/accept/{token}	[POST]
+func (s *userApi) AcceptInvitation(req *AcceptInvitationRequest) (res *AcceptInvitationResponse, err error) {
+	if req.Token == "" {
+		return nil, fmt.Errorf("token is required")
+	}
+
+	claims := jwt.MapClaims{}
+	_, err = jwt.ParseWithClaims(req.Token, claims, func(token *jwt.Token) (interface{}, error) {
+		return []byte(os.Getenv("JWT_SECRET")), nil
+	})
+	if err != nil {
+		return nil, err
+	}
+
+	email := fmt.Sprintf("%v", claims["email"])
+	orgIdStr := fmt.Sprintf("%v", claims["orgId"])
+	roleIdStr := fmt.Sprintf("%v", claims["roleId"])
+	status := fmt.Sprintf("%v", claims["status"])
+	currentUserFullName := fmt.Sprintf("%v", claims["currentUserFullName"])
+
+	roleId, err := strconv.Atoi(roleIdStr)
+	if err != nil {
+		return nil, err
+	}
+
+	orgId, err := strconv.Atoi(orgIdStr)
+	if err != nil {
+		return nil, err
+	}
+
+	var org orgsvc.Org
+	result := s.db.Table(orgsvc.OrgTableName).Where("id = ?", orgId).First(&org)
+	if result.Error != nil {
+		return nil, result.Error
+	}
+
+	var user User
+	result = s.db.Table(UserTableName).Where("email = ?", email).First(&user)
+	if result.Error != nil {
+		log.Error("user not found")
+	}
+
+	var userOrgRoleCount int64
+	result = s.db.Table(orgsvc.UserOrgRoleTableName).
+		Joins("LEFT JOIN users as u ON u.id=user_org_roles.user_id").
+		Where("u.email = ? AND user_org_roles.org_id = ? AND user_org_roles.status = ?", email, orgId, UserStatusActive).
+		Count(&userOrgRoleCount)
+	if result.Error != nil {
+		return nil, result.Error
+	}
+
+	if userOrgRoleCount > 0 {
+		return nil, fmt.Errorf("user already has an active role in this organization")
+	}
+
+	token := ""
+	if roleId == 5 || roleId == 6 || roleId == 7 {
+		token = req.Token
+	}
+
+
+	type ownerAdminEmail struct {
+		Email string
+	}
+
+	rows, err := s.db.Table(UserTableName).
+	Select("email").
+	Joins("LEFT JOIN user_org_roles AS uor ON uor.user_id = users.id").
+		Joins("LEFT JOIN roles on roles.id = uor.role_id").
+		Joins("LEFT JOIN orgs on orgs.id = uor.org_id").
+		Where("orgs.id = ?", org.ID).
+		Where("roles.id = ?", 1).
+		Or("roles.id = ?", 2).
+		Rows()
+	if err != nil {
+		return nil, err
+	}
+
+	var ownerAdminEmails []ownerAdminEmail
+	for rows.Next() {
+		oau := ownerAdminEmail{}
+		err = rows.Scan(&oau.Email)
+		if err != nil {
+			return nil, err
+		}
+		ownerAdminEmails = append(ownerAdminEmails, oau)
+	}
+
+	if user.Username != nil {
+		// This means user already completed registration so we just redirect
+
+		var usrOrgRole orgsvc.UserOrgRole
+		result = s.db.Where("user_id = ? AND org_id = ?", user.ID, org.ID).First(&usrOrgRole)
+		if result.Error != nil {
+			return nil, result.Error
+		}
+
+		result = s.db.Model(&usrOrgRole).Where("user_id = ? AND org_id = ? AND role_id = ?", usrOrgRole.UserID, usrOrgRole.OrgID, usrOrgRole.RoleID).Update("status", status)
+		if result.Error != nil {
+			return nil, result.Error
+		}
+
+		roleStr := helper.RoleTypeStr(usrOrgRole.RoleID)
+		inviteeFullName := user.FirstName + " " + user.LastName
+
+		requestedUserType := helper.RoleTypeStr(usrOrgRole.RoleID)
+		userProfileLink := s.uiAppUrl + "/o/" + org.Slug + "/users/" + strings.ToLower(*user.Username)
+
+		if status == UserStatusPending {
+			for _, ownerAdmin := range ownerAdminEmails {
+				m := gomail.NewMessage()	
+				m.SetHeader("From", "influxoks@gmail.com")
+				m.SetHeader("To", ownerAdmin.Email)
+				m.SetHeader("Subject", "Vezhguesi: Request to approve new invited user.")
+				m.SetBody("text/html", fmt.Sprintf(`Hello from Vezhguesi!<br/><br/>
+
+					%s has invited %s to join the Organization %s as %s.<br/>
+					Please click the link below to review and approve/deny the invitation: <br/><br/>
+
+					<a href='%s'>Approve Invitation</a><br/><br/>
+
+				Thank you, <br/>
+				Vezhguesi Team
+			`, currentUserFullName, user.Email, requestedUserType, userProfileLink))
+				err = s.dialer.DialAndSend(m)
+				if err != nil {
+					return nil, err
+				}
+			}
+		} else {
+			for _, ownerAdmin := range ownerAdminEmails {
+				m := gomail.NewMessage()	
+				m.SetHeader("From", "influxoks@gmail.com")
+				m.SetHeader("To", ownerAdmin.Email)
+				m.SetHeader("Subject", "Vezhguesi - New " + roleStr + " has joined " + org.Name)
+				m.SetBody("text/html", fmt.Sprintf(`Hello from Vezhguesi!<br/><br/>
+
+					New %s has joined your %s organization!<br/><br/>
+
+					Full Name: %s<br/>
+					User Type: %s <br/><br/>
+
+					<a href='%s'>View Profile</a><br/><br/>
+
+					Thank you, <br/>
+					Vezhguesi Team
+			`, currentUserFullName, user.Email, requestedUserType, inviteeFullName, userProfileLink))
+				err = s.dialer.DialAndSend(m)
+				if err != nil {
+					return nil, err
+				}
+			}
+		}
+	}
+
+	// If user is not found, we create a new user
+	if user.ID == 0 {
+		// Generate hash pw
+		hashedPassword, err := bcrypt.GenerateFromPassword([]byte(req.Password), bcrypt.DefaultCost)
+		if err != nil {
+			return nil, fmt.Errorf("failed to hash password: %v", err)
+		}
+
+		user.Password = string(hashedPassword)
+		
+		// For debugging
+		fmt.Printf("New password hash: %s\n", user.Password)
+		
+		// Verify the hash immediately to ensure it works
+		err = bcrypt.CompareHashAndPassword([]byte(user.Password), []byte(req.Password))
+		if err != nil {
+			return nil, fmt.Errorf("password hash verification failed: %v", err)
+		}
+
+		user.Email = email
+		user.FirstName = req.FirstName
+		user.LastName = req.LastName
+		user.Username = &req.UserName
+		user.Active = true
+		user.VerifiedEmail = true
+
+		result = s.db.Omit("UpdatedAt").Create(&user)
+		if result.Error != nil {
+			return nil, result.Error
+		}
+	}
+
+	return &AcceptInvitationResponse{
+		InviteAccepted: true,
+		OrgSlug: org.Slug,
+		Token: token,
+		Status: status,
+		RoleID: roleId,
+	}, nil
+}
+
+
+
 
 
 // Private helper funcs
